# ocr-passport

./: CMakeLists.txt  README.MD  main.cpp
include/: passport-ocr.h
src/: ocr_area_io.cpp  passport_ocr.cpp
